plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.91'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = 'GTCEu Maven'
        url = 'https://maven.gtceu.com'
        content {
            includeGroup 'com.gregtechceu.gtceu'
            includeGroup 'brachy.modularui'
        }
    }
    maven {
        name 'BlameJared Maven'
        url = 'https://maven.blamejared.com'
    }
    maven {
        name = 'FirstDarkDev Maven'
        url = 'https://maven.firstdark.dev/snapshots'
    }
    maven {
        name = 'TTerraG Maven'
        url = 'https://maven.tterrag.com'
    }
    maven {
        name = 'Architectury Maven'
        url = 'https://maven.architectury.dev'
        content {
            includeGroup 'dev.architectury'
        }
    }
    maven {
        name = 'LatvianDev Maven'
        url = 'https://maven.latvian.dev/releases'
        content {
            includeGroup 'dev.latvian.mods'
        }
    }
    maven {
        name = 'Create Maven'
        url = 'https://maven.createmod.net'
    }
    maven {
        name = 'TerraformersMC Maven'
        url = 'https://maven.terraformersmc.com/'
        content {
            includeGroup 'dev.emi'
        }
    }
    maven {
        name = 'TheIllusiveC4 Maven'
        url = 'https://maven.theillusivec4.top/'
    }
    maven {
        name = 'ModMaven'
        url = 'https://modmaven.dev'
        content {
            includeGroup 'appeng'
        }
    }
    maven {
        name = 'CurseMaven'
        url = 'https://cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath(), '--existing-mod', 'gtceu', '--existing-mod', 'tconstruct'
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

dependencies {
    implementation "org.projectlombok:lombok:1.18.42"
    modImplementation "com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtm_version}"
    modImplementation "appeng:appliedenergistics2-forge:${ae2_version}"
    modImplementation "brachy.modularui:modularui-mc${minecraft_version}:${mui_version}"
    modImplementation "com.tterrag.registrate:Registrate:${registrate_version}"
    modImplementation "dev.architectury:architectury-forge:${architectury_version}"
    modImplementation "dev.latvian.mods:rhino-forge:${rhino_version}"
    modImplementation "dev.latvian.mods:kubejs-forge:${kubejs_version}"
    modImplementation "curse.maven:mantle-74924:7563777"
    modImplementation "curse.maven:tinkers-construct-74072:7449219"
    modImplementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    modLocalRuntime "org.appliedenergistics:guideme:${guideme_version}"
    modLocalRuntime "net.createmod.ponder:Ponder-Forge-${minecraft_version}:${ponder_version}"
    modLocalRuntime "dev.engine-room.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}"
    modLocalRuntime "dev.emi:emi-forge:${emi_version}+${minecraft_version}"
    modLocalRuntime "top.theillusivec4.curios:curios-forge:${curios_version}+${minecraft_version}"
    compileOnly "org.jetbrains:annotations:26.0.2"
}

// Idk if we will need mixin so keeping this. evolutioncore.mixins.json!!!
/*
mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

dependencies {
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

jar {
    manifest.attributes([
            'MixinConfigs': "${mod_id}.mixins.json"
    ])
}
*/

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
            minecraft_version        : minecraft_version,
            minecraft_version_range  : minecraft_version_range,
            forge_version            : forge_version,
            forge_version_range      : forge_version_range,
            loader_version_range     : loader_version_range,
            mod_id                   : mod_id,
            mod_name                 : mod_name,
            mod_license              : mod_license,
            mod_version              : mod_version,
            mod_authors              : mod_authors,
            mod_description          : mod_description,
            gtm_version_range        : gtm_version_range,
            kjs_version_range        : kjs_version_range,
            create_version_range     : create_version_range,
            tinkers_version_range    : tinkers_version_range,
            ae2_version_range        : ae2_version_range
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}
sourceSets.main.resources.srcDir generateModMetadata
legacyForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
